DT-1377 Fixes column cutoff problem on menu and changes design slightly

--- a/css/menu.less
+++ b/css/menu.less
@@ -144,11 +144,6 @@ a.menu-pull {
 	font-weight: @font-swatch4-font-weight;
 	line-height: @font-swatch4-line-height;
 	letter-spacing: @font-swatch4-letter-spacing;
-
-	float: left;
-	@media @tablet {
-		float: none;
-	}
 }
 
 
@@ -156,7 +151,6 @@ a.menu-pull {
 
 
 .menu-item-description {
-	margin-left: 90px;
 	@media @tablet {
 		margin-left: 0;
 	}
